tests/js/valid/list/parses/comments-0.buri
a = [-- hello
    "", -- description of element 1


    "", -- description of element 2
]