tests/js/invalid/if/list-conditional.buri
result = if [1, 2, 3] do "hello"